# start

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.local.json
backend/: .env.example  __init__.py  aiseo.db  all_historical_responses.py  database.py  fix_brand_mentions.py  generate_historical_data.py  main.py  models.py  populate_historical_sources.py  requirements.txt  schemas.py  seed_data.py  update_historical_responses.py
backend/services/: __init__.py  embeddings.py  llm_client.py  rag_service.py
frontend/: .env.production  PROJECT.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/.claude/: ralph-loop.local.md
frontend/playwright-report/: index.html
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/charts/: BrandComparisonToggle.tsx  ChartDrilldownModal.tsx  (+1 more)
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useApi.ts  useClickOutside.ts  useGlobalSearch.ts  useLocalStorage.ts  useMediaQuery.ts
frontend/src/pages/: Brands.tsx  Dashboard.tsx  Prompts.tsx  Settings.tsx  Sources.tsx  Suggestions.tsx
frontend/src/types/: index.ts
frontend/tests/: dark-theme.spec.ts  dropdown-test.spec.ts  mobile-compact-check.spec.ts  mobile-responsive.spec.ts  sidebar-expanded.spec.ts  ui-theme.spec.ts  visual-audit.spec.ts
scripts/: scrape_google_ai.py
src/config/: settings.py
src/scrapers/: google_ai_scraper.py
src/utils/: exceptions.py  logger.py
(+27 files in other folders)
